syntax = "proto2";

package spotify.extendedmetadata.proto;

import "extension_kind.proto";
import "entity_extension_data.proto";

option optimize_for = CODE_SIZE;
option java_package = "com.spotify.extendedmetadata";

message ExtensionQuery {
	optional spotify.extendedmetadata.proto.ExtensionKind extension_kind = 1;
	optional string etag = 2;
}

message EntityRequest {
	optional string entity_uri = 1;
	repeated spotify.extendedmetadata.proto.ExtensionQuery query = 2;
}

message BatchedEntityRequestHeader {
	optional string country = 1;
	optional string catalogue = 2;
}

message BatchedEntityRequest {
	optional spotify.extendedmetadata.proto.BatchedEntityRequestHeader header = 1;
	repeated spotify.extendedmetadata.proto.EntityRequest entity_request = 2;
}

message EntityExtensionDataArrayHeader {
	optional int32 provider_error_status = 1;
	optional int64 cache_ttl_in_seconds = 2;
	optional int64 offline_ttl_in_seconds = 3;
}

message EntityExtensionDataArray {
	optional spotify.extendedmetadata.proto.EntityExtensionDataArrayHeader header = 1;
	optional spotify.extendedmetadata.proto.ExtensionKind extension_kind = 2;
	repeated spotify.extendedmetadata.proto.EntityExtensionData extension_data = 3;
}

message BatchedExtensionResponseHeader {
}

message BatchedExtensionResponse {
	optional spotify.extendedmetadata.proto.BatchedExtensionResponseHeader header = 1;
	repeated spotify.extendedmetadata.proto.EntityExtensionDataArray extended_metadata = 2;
}
